--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,51 +4,6 @@ on:
   push
 
 jobs:
-  build-linux-ubuntu:
-    runs-on: ubuntu-latest
-    steps:
-    - name: prepare environment
-      run: |
-          echo "target_triplet=`gcc -dumpmachine`" >> $GITHUB_ENV
-    - name: fetch libplist
-      uses: dawidd6/action-download-artifact@v2
-      with:
-        github_token: ${{secrets.GITHUB_TOKEN}}
-        workflow: build.yml
-        name: libplist-latest_${{env.target_triplet}}
-        repo: libimobiledevice/libplist
-    - name: fetch libimobiledevice-glue
-      uses: dawidd6/action-download-artifact@v2
-      with:
-        github_token: ${{secrets.GITHUB_TOKEN}}
-        workflow: build.yml
-        name: libimobiledevice-glue-latest_${{env.target_triplet}}
-        repo: libimobiledevice/libimobiledevice-glue
-    - name: install external dependencies
-      run: |
-          mkdir extract
-          for I in *.tar; do
-            tar -C extract -xvf $I
-          done
-          sudo cp -r extract/* /
-          sudo ldconfig
-    - uses: actions/checkout@v2
-    - name: autogen
-      run: ./autogen.sh PKG_CONFIG_PATH=/usr/local/lib/pkgconfig LDFLAGS="-Wl,-rpath=/usr/local/lib"
-    - name: make
-      run: make
-    - name: make install
-      run: sudo make install
-    - name: prepare artifact
-      run: |
-          mkdir -p dest
-          DESTDIR=`pwd`/dest make install
-          tar -C dest -cf libusbmuxd.tar usr
-    - name: publish artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: libusbmuxd-latest_${{env.target_triplet}}
-        path: libusbmuxd.tar
   build-macOS:
     runs-on: macOS-latest
     steps:
@@ -66,14 +21,14 @@ jobs:
         github_token: ${{secrets.GITHUB_TOKEN}}
         workflow: build.yml
         name: libplist-latest_macOS
-        repo: libimobiledevice/libplist
+        repo: LukeeGD/libplist
     - name: fetch libimobiledevice-glue
       uses: dawidd6/action-download-artifact@v2
       with:
         github_token: ${{secrets.GITHUB_TOKEN}}
         workflow: build.yml
         name: libimobiledevice-glue-latest_macOS
-        repo: libimobiledevice/libimobiledevice-glue
+        repo: LukeeGD/libimobiledevice-glue
     - name: install external dependencies
       run: |
           mkdir extract
